fixed navbar burger menu on mobile, added default bulma burger animation

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -1,5 +1,10 @@
 @charset "utf-8";
 
+/*
+  Bulma Default SASS Variable Overrides
+  https://bulma.io/documentation/customize/variables/
+ */
+
 // Colors
 $beige-lighter: #EFF0EB;
 
@@ -14,16 +19,5 @@ $navbar-item-color: white;
 // Cards
 $card-content-padding: 0.75em;
 $card-footer-padding: 1em;
-
-// Columns
-
-
-//// Global
-//$body-background-color: $beige-lighter;
-//$info: #C93434;
-//
-//// Navbar
-//$navbar-background-color: #C93434;
-//$navbar-item-color: white;
 
 @import "~bulma/bulma.sass";
